--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -26,26 +26,38 @@ spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-spring.redis.abort-connect=false
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=1111
-spring.redis.lettuce.pool.max-active=10
-spring.redis.lettuce.pool.max-idle=10
-spring.redis.lettuce.pool.min-idle=2
-spring.redis.lettuce.pool.max-wait=-1ms
-spring.redis.lettuce.shutdown-timeout=200ms
+#spring.redis.abort-connect=false
+#spring.redis.host=127.0.0.1
+#spring.redis.port=6379
+#spring.redis.password=1111
+#spring.redis.lettuce.pool.max-active=10
+#spring.redis.lettuce.pool.max-idle=10
+#spring.redis.lettuce.pool.min-idle=2
+#spring.redis.lettuce.pool.max-wait=-1ms
+#spring.redis.lettuce.shutdown-timeout=200ms
 
 ### HttpSession ###
+## Session Type
+#spring.session.store-type=redis
+spring.session.store-type=jdbc
+
+## JDBC for Spring Session
+# Database schema initialization mode.
+spring.session.jdbc.initialize-schema=embedded
+# Path to the SQL file to use to initialize the database schema.
+spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
+# Name of the database table used to store sessions. 
+spring.session.jdbc.table-name=SPRING_SESSION
+
 ## Session timeout. If a duration suffix is not specified, seconds are used.
 ## Set the timeout up 30minutes
 server.servlet.session.timeout=1800
 
-## Session Type
-spring.session.store-type=redis
+### Redis Cache
+#spring.cache.type=redis
 
-### Cache Type
-spring.cache.type=redis
+### EHCACHE Cache
+spring.cache.jcache.config=classpath:ehcache.xml
 
 ### SSO ###
 ## Authentication using DDP
