--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -14,7 +14,7 @@ sap.jco.landscape=GMT;P01;P09;BPP
 sap.jco.landscape.default=P09
 
 ### JDBC ###
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy2
 spring.datasource.username=root
 spring.datasource.password=1111
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
