--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.thymeleaf.encoding=UTF-8
 ### SAP Landscape ###
 sap.jco.is-active=false
 sap.jco.sid=DEV
-sap.jco.landscape=GMT;P01;P09;BPP
+sap.jco.landscape=GMT^P01^P09^BPP
 sap.jco.landscape.default=P09
 
 ### JDBC ###
