플랫폼 리펙토링

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -41,6 +41,9 @@ spring.datasource.hikari.maximumPoolSize=30
 #spring.session.store-type=redis
 spring.session.store-type=jdbc
 
+## Session timeout. If a duration suffix is not specified, seconds are used.
+server.servlet.session.timeout=60m
+
 ## JDBC for Spring Session
 # Database schema initialization mode.
 spring.session.jdbc.initialize-schema=embedded
@@ -49,9 +52,11 @@ spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mys
 # Name of the database table used to store sessions. 
 spring.session.jdbc.table-name=SPRING_SESSION
 
-## Session timeout. If a duration suffix is not specified, seconds are used.
-## Set the timeout up 30minutes
-server.servlet.session.timeout=1800
+## Spring Security
+#Http Only : true\ub85c \uc124\uc815\ud558\uba74 \ud074\ub77c\uc774\uc5b8\ud2b8 \uc0ac\uc774\ub4dc\uc758 \uc790\ubc14\uc2a4\ud06c\ub9bd\ud2b8\ub294 \ud574\ub2f9 \ucfe0\ud0a4\uc5d0 \uc811\uadfc\ud560 \uc218 \uc5c6\ub2e4. \ub2e4\uc2dc \ub9d0\ud574 \ud574\ub2f9 \ucfe0\ud0a4\ub97c \uc0dd\uc131\ud558\uace0 \uc804\uc1a1\ud574 \uc900 \uc11c\ubc84\ub9cc \uc811\uadfc\ud560 \uc218 \uc788\ub2e4.
+#Secure Flag : true\ub85c \uc124\uc815\ud558\uba74 \ubcf4\uc548\uc774 \ud655\ubcf4\ub41c \ucc44\ub110(HTTPS)\uc744 \ud1b5\ud574\uc11c\ub9cc \ucfe0\ud0a4\ub97c \uc804\uc1a1\ud55c\ub2e4. \uc911\uac04\uc5d0\uc11c \uc5ff\ubcfc \uc218 \uc5c6\ub2e4
+server.session.cookie.http-only=true
+#server.session.cookie.secure=true
 
 ### Redis Cache
 #spring.cache.type=redis
