플랫폼 리펙토링

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -72,5 +72,8 @@ spring.cache.jcache.config=classpath:ehcache.xml
 
 ### File Upload ###
 ## Multipart
-spring.servlet.multipart.maxFileSize=30MB
-spring.servlet.multipart.maxRequestSize=30MB
+spring.servlet.multipart.maxFileSize=2048MB
+spring.servlet.multipart.maxRequestSize=2048MB
+spring.servlet.multipart.location=C://Downloads
+## Upload Path
+file.upload.rootPath=C://Downloads
