플랫폼 리펙토링

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -15,8 +15,8 @@ sap.jco.landscape.default=P09
 
 ### JDBC ###
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
-spring.datasource.username=root
-spring.datasource.password=1111
+spring.datasource.username=Xb6wIyVVqqzcJm+yyGntyw==
+spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
@@ -74,6 +74,6 @@ spring.cache.jcache.config=classpath:ehcache.xml
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2048MB
-spring.servlet.multipart.location=C://Downloads
+spring.servlet.multipart.location=C:\\Downloads
 ## Upload Path
-file.upload.rootPath=C://Downloads
+file.upload.rootPath=C:\\Downloads
