--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -147,6 +147,20 @@
 			<version>2.3.5</version>
 		</dependency>
 		<!-- modelmapper -->
+		
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+		</dependency>
+		
+		<!-- XSS detection -->		
+		<dependency>
+			<groupId>com.navercorp.lucy</groupId>
+			<artifactId>lucy-xss-servlet</artifactId>
+			<version>2.0.0</version>
+		</dependency>		
+		
 	</dependencies>
 
 	<build>
