플랫폼 리펙토링

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ### Platform Attributes ###
 platform.service=DEV
-#oracle, mariadb
-platform.db=mariadb
+#oracle, mariadb, mssql
+#platform.db=mariadb
+platform.db=mssql
 
 ### Thymeleaf ###
 spring.thymeleaf.cache=false
@@ -14,14 +15,23 @@ sap.jco.landscape=GMT^P01^P09^BPP
 sap.jco.landscape.default=P09
 
 ### JDBC ###
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
-spring.datasource.username=Xb6wIyVVqqzcJm+yyGntyw==
-spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
+## MariaDB
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
+#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
+#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
 
-## hikari
+## MS-SQL
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=jwebppy
+spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
+spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+spring.datasource.testWhileIdle=true
+spring.datasource.tomcat.validationQuery=select 1
+
+## Connection Pool
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
