--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ### Platform Attributes ###
 platform.service=DEV
-#oracle, mariadb, mssql
+##oracle, mariadb, mssql
 #platform.db=mariadb
 platform.db=mssql
 
@@ -23,13 +23,13 @@ sap.jco.landscape.default=P09
 #spring.datasource.testWhileIdle=true
 #spring.datasource.validationQuery=SELECT 1
 
-## MS-SQL
+## MSSQL
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databasename=jwebppy
 spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
 spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
 spring.datasource.testWhileIdle=true
-spring.datasource.tomcat.validationQuery=select 1
+spring.datasource.validationQuery=SELECT 1
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
@@ -83,7 +83,9 @@ spring.cache.jcache.config=classpath:ehcache.xml
 ### File Upload ###
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
-spring.servlet.multipart.maxRequestSize=2048MB
+spring.servlet.multipart.maxRequestSize=2100MB
 spring.servlet.multipart.location=C:\\Downloads
 ## Upload Path
 file.upload.rootPath=C:\\Downloads
+## Invalid Extension
+file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
