--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -169,6 +169,14 @@
 			<version>2.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-ldap</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
