플랫폼 리펙토링

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ### Platform Attributes ###
 platform.service=DEV
 ##oracle, mariadb, mssql
-#platform.db=mariadb
-platform.db=mssql
+platform.db=mariadb
+#platform.db=mssql
 
 ### Thymeleaf ###
 spring.thymeleaf.cache=false
@@ -16,20 +16,20 @@ sap.jco.landscape.default=P09
 
 ### JDBC ###
 ## MariaDB
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
-#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
-#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-#spring.datasource.testWhileIdle=true
-#spring.datasource.validationQuery=SELECT 1
-
-## MSSQL
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=jwebppy
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
 spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
 spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
+
+## MSSQL
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://localhost;databasename=jwebppy
+#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
+#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
@@ -105,3 +105,6 @@ file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
 spring.mail.host=10.224.49.221
 spring.mail.username=/ytVVSzqnPOoUI/crLgefQ==
 spring.mail.password=HiP9HSAJiyxbd8zk0xkXbw==
+
+### Max Header Size ###
+server.max-http-header-size=2097152
