--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### SAP Landscape ###
-sap.jco.isActive=false
+sap.jco.isActive=true
 sap.jco.sid=DEV
 sap.jco.landscape=GMT^P01^P09
 sap.jco.landscape.default=P09
