--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -79,6 +79,11 @@
 			<version>4.4</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
@@ -179,7 +184,7 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.0.0</version>
-		</dependency>		
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
