--- a/jwebppy/src/main/resources/log4jdbc.log4j2.properties
+++ b/jwebppy/src/main/resources/log4jdbc.log4j2.properties
@@ -1,3 +1,3 @@
 log4jdbc.spylogdelegator.name=net.sf.log4jdbc.log.slf4j.Slf4jSpyLogDelegator
-# 최대 출력 라인수 지정. 0:제한없이 출력
+# \ucd5c\ub300 \ucd9c\ub825 \ub77c\uc778\uc218 \uc9c0\uc815. 0:\uc81c\ud55c\uc5c6\uc774 \ucd9c\ub825
 log4jdbc.dump.sql.maxlinelength=0
