--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -200,8 +200,11 @@
 			<artifactId>spring-batch-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		
+		<dependency>
+			<groupId>com.github.vertical-blank</groupId>
+			<artifactId>sql-formatter</artifactId>
+			<version>2.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
