--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### SAP Landscape ###
-sap.jco.isActive=true
+sap.jco.enable=true
 sap.jco.sid=DEV
 sap.jco.landscape=GMT^P01^P09
 sap.jco.landscape.default=P09
@@ -76,6 +76,7 @@ spring.cache.jcache.config=classpath:ehcache.xml
 
 ### Authentication ###
 ## Authentication using Ldap
+ldap.enable=false
 ldap.url=ldap://corp.doosan.com:389
 ldap.dn=DC=CORP,DC=DOOSAN,DC=COM
 
