플랫폼 개발

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -9,10 +9,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### SAP Landscape ###
-sap.jco.enable=true
-sap.jco.sid=DEV
-sap.jco.landscape=GMT^P01^P09
-sap.jco.landscape.default=P09
+sap.jco.enable=false
 
 ### JDBC ###
 ## MariaDB
