--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -3,6 +3,7 @@ platform.service=DEV
 ##oracle, mariadb, mssql
 platform.db=mariadb
 #platform.db=mssql
+platform.contextPath=/platform
 
 ### Thymeleaf ###
 spring.thymeleaf.cache=false
