플랫폼 개발

--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -50,7 +50,7 @@ spring.datasource.hikari.maximumPoolSize=30
 spring.session.store-type=jdbc
 
 ## Session timeout. If a duration suffix is not specified, seconds are used.
-server.servlet.session.timeout=60m
+server.servlet.session.timeout=120m
 
 ## JDBC for Spring Session
 # Database schema initialization mode.
@@ -66,10 +66,11 @@ spring.session.jdbc.table-name=SPRING_SESSION
 server.session.cookie.http-only=true
 #server.session.cookie.secure=true
 
-### Redis Cache
+### Cache ###
+## Redis Cache
 #spring.cache.type=redis
 
-### EHCACHE Cache
+## EHCACHE Cache
 spring.cache.jcache.config=classpath:ehcache.xml
 
 ### Authentication ###
