--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
 ### SAP Landscape ###
-sap.jco.enable=false
+sap.jco.enable=true
 
 ### JDBC ###
 ## MariaDB
