--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -207,11 +207,19 @@
 			<version>4.0.0</version>
 		</dependency>
 
+		<!-- Display formatted SQL -->
 		<dependency>
 			<groupId>com.github.vertical-blank</groupId>
 			<artifactId>sql-formatter</artifactId>
 			<version>2.0.2</version>
-		</dependency>	
+		</dependency>
+		
+		<!-- Apache Common Validator -->
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.7</version>
+		</dependency>
 		
 		<!-- SAP Jco -->
 		<dependency>
