--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -33,20 +33,21 @@ spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-#spring.redis.abort-connect=false
-#spring.redis.host=127.0.0.1
-#spring.redis.port=6379
-#spring.redis.password=1111
-#spring.redis.lettuce.pool.max-active=10
-#spring.redis.lettuce.pool.max-idle=10
-#spring.redis.lettuce.pool.min-idle=2
-#spring.redis.lettuce.pool.max-wait=-1ms
-#spring.redis.lettuce.shutdown-timeout=200ms
+spring.redis.host=div-ordering-dev.redis.cache.windows.net
+spring.redis.port=6380
+spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+spring.redis.ssl=true
+spring.redis.abort-connect=false
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.shutdown-timeout=200ms
 
 ### HttpSession ###
 ## Session Type
-#spring.session.store-type=redis
-spring.session.store-type=jdbc
+spring.session.store-type=REDIS
+#spring.session.store-type=jdbc
 
 ## Session timeout. If a duration suffix is not specified, seconds are used.
 server.servlet.session.timeout=120m
@@ -67,10 +68,10 @@ server.session.cookie.http-only=true
 
 ### Cache ###
 ## Redis Cache
-#spring.cache.type=redis
+spring.cache.type=redis
 
 ## EHCACHE Cache
-spring.cache.jcache.config=classpath:ehcache.xml
+#spring.cache.jcache.config=classpath:ehcache.xml
 
 ### Authentication ###
 ## Authentication using Ldap
