--- a/jwebppy/pom.xml
+++ b/jwebppy/pom.xml
@@ -243,6 +243,15 @@
 			<scope>system</scope>
 			<systemPath>${project.lib.path}/sap/GenericConnector.jar</systemPath>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.2.0.1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/ojdbc8.jar</systemPath>
+		</dependency>		
+		
 	</dependencies>
 
 	<build>
