--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ### Platform Attributes ###
 platform.service=DEV
 ##oracle, mariadb, mssql
-platform.db=mariadb
+#platform.db=mariadb
 #platform.db=mssql
+platform.db=oracle
 
 ### Thymeleaf ###
 spring.thymeleaf.cache=false
@@ -13,12 +14,12 @@ sap.jco.enable=true
 
 ### JDBC ###
 ## MariaDB
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
-spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
-spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=SELECT 1
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
+#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
+#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
 
 ## MSSQL
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -28,15 +29,24 @@ spring.datasource.validationQuery=SELECT 1
 #spring.datasource.testWhileIdle=true
 #spring.datasource.validationQuery=SELECT 1
 
+## Oracle
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
+spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-spring.redis.host=div-ordering-dev.redis.cache.windows.net
-spring.redis.port=6380
-spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
-spring.redis.ssl=true
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=1111
+#spring.redis.host=div-ordering-dev.redis.cache.windows.net
+#spring.redis.port=6380
+#spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+#spring.redis.ssl=true
 spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
