--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -40,13 +40,13 @@ spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=1111
-#spring.redis.host=div-ordering-dev.redis.cache.windows.net
-#spring.redis.port=6380
-#spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
-#spring.redis.ssl=true
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=1111
+spring.redis.host=div-ordering-dev.redis.cache.windows.net
+spring.redis.port=6380
+spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+spring.redis.ssl=true
 spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
@@ -66,7 +66,7 @@ server.servlet.session.timeout=120m
 # Database schema initialization mode.
 spring.session.jdbc.initialize-schema=embedded
 # Path to the SQL file to use to initialize the database schema.
-spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
+#spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
 # Name of the database table used to store sessions. 
 spring.session.jdbc.table-name=SPRING_SESSION
 
