--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -40,13 +40,13 @@ spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=1111
-spring.redis.host=div-ordering-dev.redis.cache.windows.net
-spring.redis.port=6380
-spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
-spring.redis.ssl=true
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=1111
+#spring.redis.host=div-ordering-dev.redis.cache.windows.net
+#spring.redis.port=6380
+#spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+#spring.redis.ssl=true
 spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
@@ -64,11 +64,11 @@ server.servlet.session.timeout=120m
 
 ## JDBC for Spring Session
 # Database schema initialization mode.
-spring.session.jdbc.initialize-schema=embedded
+#spring.session.jdbc.initialize-schema=embedded
 # Path to the SQL file to use to initialize the database schema.
 #spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
 # Name of the database table used to store sessions. 
-spring.session.jdbc.table-name=SPRING_SESSION
+#spring.session.jdbc.table-name=SPRING_SESSION
 
 ## Spring Security
 #Http Only : true\ub85c \uc124\uc815\ud558\uba74 \ud074\ub77c\uc774\uc5b8\ud2b8 \uc0ac\uc774\ub4dc\uc758 \uc790\ubc14\uc2a4\ud06c\ub9bd\ud2b8\ub294 \ud574\ub2f9 \ucfe0\ud0a4\uc5d0 \uc811\uadfc\ud560 \uc218 \uc5c6\ub2e4. \ub2e4\uc2dc \ub9d0\ud574 \ud574\ub2f9 \ucfe0\ud0a4\ub97c \uc0dd\uc131\ud558\uace0 \uc804\uc1a1\ud574 \uc900 \uc11c\ubc84\ub9cc \uc811\uadfc\ud560 \uc218 \uc788\ub2e4.
