--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -31,22 +31,26 @@ sap.jco.enable=true
 
 ## Oracle
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
-spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+spring.datasource.url=jdbc:oracle:thin:@10.249.26.186:1527:DIVDPDEV
+spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
+spring.datasource.password=e+G1DTigu6/5B2kXbwtaIQ==
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
+#spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
+#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
+
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=1111
-#spring.redis.host=div-ordering-dev.redis.cache.windows.net
-#spring.redis.port=6380
-#spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
-#spring.redis.ssl=true
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=1111
+spring.redis.host=div-ordering-dev.redis.cache.windows.net
+spring.redis.port=6380
+spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
+spring.redis.ssl=true
 spring.redis.abort-connect=false
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
@@ -90,7 +94,7 @@ ldap.url=ldap://corp.doosan.com:389
 ldap.dn=DC=CORP,DC=DOOSAN,DC=COM
 
 ## Master Password
-master.password=slHjZzaERl86jQKpFmxJDw==
+master.password=CKI2gZB1dOUL+9NDpk/C9w==
 
 ### Batch ###
 spring.batch.job.enabled=false
