--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -9,6 +9,10 @@ platform.db=oracle
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
 
+### Interface Logging ###
+if.logging.sap=true
+if.logging.db=true
+
 ### SAP Landscape ###
 sap.jco.enable=true
 
@@ -37,7 +41,6 @@ spring.datasource.password=e+G1DTigu6/5B2kXbwtaIQ==
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
 #spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
 #spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
