--- a/jwebppy/src/main/resources/application.properties
+++ b/jwebppy/src/main/resources/application.properties
@@ -103,16 +103,6 @@ master.password=CKI2gZB1dOUL+9NDpk/C9w==
 spring.batch.job.enabled=false
 task.scheduling.threadPoolSize=50
 
-### File Upload ###
-## Multipart
-spring.servlet.multipart.maxFileSize=2048MB
-spring.servlet.multipart.maxRequestSize=2100MB
-spring.servlet.multipart.location=C:\\Downloads
-## Upload Path
-file.upload.rootPath=C:\\Downloads
-## Invalid Extension
-file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
-
 ### Mailing ####
 spring.mail.host=10.224.49.221
 spring.mail.username=/ytVVSzqnPOoUI/crLgefQ==
@@ -120,3 +110,15 @@ spring.mail.password=HiP9HSAJiyxbd8zk0xkXbw==
 
 ### Maximum size of the HTTP message header ###
 server.max-http-header-size=2097152
+
+### File Upload ###
+## Multipart
+spring.servlet.multipart.maxFileSize=2048MB
+spring.servlet.multipart.maxRequestSize=2100MB
+spring.servlet.multipart.location=C:\\Downloads
+## Upload Path
+file.upload.rootPath=C:\\Downloads
+file.upload.divk.domestic.parts.claim=C:\\Downloads\\divk\\domestic\\parts\\claim
+
+## Invalid Extension
+file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
