--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>jWebppy Platform</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 		<project.lib.path>${project.basedir}/lib</project.lib.path>
 	</properties>
@@ -25,12 +25,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -41,10 +39,10 @@
 			<version>2.1.4</version>
 		</dependency>
 		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -139,12 +137,17 @@
 		</dependency>
 
 		<!-- JDBC Driver-MSSQL -->
-		<dependency>
+		<!-- dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<!-- JDBC Driver-MSSQL -->		
+		</dependency -->
+		<!-- JDBC Driver-MSSQL -->
+		<!-- dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency -->		
 		
 		<!-- Redis's Connection Pool -->
 		<dependency>
@@ -243,18 +246,15 @@
 			<scope>system</scope>
 			<systemPath>${project.lib.path}/sap/GenericConnector.jar</systemPath>
 		</dependency>
-		
 		<dependency>
-			<groupId>com.oracle.jdbc</groupId>
+			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
-			<version>12.2.0.1</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/lib/ojdbc8.jar</systemPath>
+			<scope>runtime</scope>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -275,6 +275,14 @@
 						-Amapstruct.defaultComponentModel=spring
 					</compilerArgs>
 				</configuration>				
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source> 
+					<target>11</target> 
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
