--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,10 @@
 		<version>2.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.doosan.iv.portal</groupId>
 	<artifactId>jwebppy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>jwebppy</name>
 	<description>jWebppy Platform</description>
 
