--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,13 @@
 			<scope>system</scope>
 			<systemPath>${project.lib.path}/sap/GenericConnector.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>cos</groupId>
+			<artifactId>cos</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${project.lib.path}/cos.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
