--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,40 +16,17 @@ if.logging.db=true
 ### SAP Landscape ###
 sap.jco.enable=true
 
-### JDBC ###
-## MariaDB
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/jwebppy
-#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
-#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-#spring.datasource.testWhileIdle=true
-#spring.datasource.validationQuery=SELECT 1
-
-## MSSQL
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://localhost;databasename=jwebppy
-#spring.datasource.username=BapumBKeHYyfLA0WEgaGug==
-#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
-#spring.datasource.testWhileIdle=true
-#spring.datasource.validationQuery=SELECT 1
-
 ## Oracle
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@10.249.26.186:1527:DIVDPDEV
 spring.datasource.username=/ZLd5JhllULSc3eQUumdNQ==
 spring.datasource.password=e+G1DTigu6/5B2kXbwtaIQ==
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XE
-#spring.datasource.username=jE3dKcBwqQBZy0llxXI6vQ==
-#spring.datasource.password=JQ3dNRuKaYzjG4uvnUpJGA==
 
 ## Connection Pool
 spring.datasource.hikari.minimumIdle=10
 spring.datasource.hikari.maximumPoolSize=30
 
 ### REDIS ###
-#spring.redis.host=localhost
-#spring.redis.port=6379
-#spring.redis.password=1111
 spring.redis.host=div-ordering-dev.redis.cache.windows.net
 spring.redis.port=6380
 spring.redis.password=kcob8nCiCQKh0nLJRC2sT1JzNoX8tBfCZf1HXEd9pjw=
@@ -69,19 +46,11 @@ spring.session.store-type=REDIS
 ## Session timeout. If a duration suffix is not specified, seconds are used.
 server.servlet.session.timeout=120m
 
-## JDBC for Spring Session
-# Database schema initialization mode.
-#spring.session.jdbc.initialize-schema=embedded
-# Path to the SQL file to use to initialize the database schema.
-#spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
-# Name of the database table used to store sessions. 
-#spring.session.jdbc.table-name=SPRING_SESSION
-
 ## Spring Security
-#Http Only : true\ub85c \uc124\uc815\ud558\uba74 \ud074\ub77c\uc774\uc5b8\ud2b8 \uc0ac\uc774\ub4dc\uc758 \uc790\ubc14\uc2a4\ud06c\ub9bd\ud2b8\ub294 \ud574\ub2f9 \ucfe0\ud0a4\uc5d0 \uc811\uadfc\ud560 \uc218 \uc5c6\ub2e4. \ub2e4\uc2dc \ub9d0\ud574 \ud574\ub2f9 \ucfe0\ud0a4\ub97c \uc0dd\uc131\ud558\uace0 \uc804\uc1a1\ud574 \uc900 \uc11c\ubc84\ub9cc \uc811\uadfc\ud560 \uc218 \uc788\ub2e4.
-#Secure Flag : true\ub85c \uc124\uc815\ud558\uba74 \ubcf4\uc548\uc774 \ud655\ubcf4\ub41c \ucc44\ub110(HTTPS)\uc744 \ud1b5\ud574\uc11c\ub9cc \ucfe0\ud0a4\ub97c \uc804\uc1a1\ud55c\ub2e4. \uc911\uac04\uc5d0\uc11c \uc5ff\ubcfc \uc218 \uc5c6\ub2e4
+#Http Only : true로 설정하면 클라이언트 사이드의 자바스크립트는 해당 쿠키에 접근할 수 없다. 다시 말해 해당 쿠키를 생성하고 전송해 준 서버만 접근할 수 있다.
+#Secure Flag : true로 설정하면 보안이 확보된 채널(HTTPS)을 통해서만 쿠키를 전송한다. 중간에서 엿볼 수 없다
 server.session.cookie.http-only=true
-#server.session.cookie.secure=true
+server.session.cookie.secure=true
 
 ### Cache ###
 ## Redis Cache
@@ -98,8 +67,8 @@ sso.ad.platform-gateway-host=https://gateway-dev.d-platform.doosan.com
 master.password=CKI2gZB1dOUL+9NDpk/C9w==
 
 ### Batch ###
-spring.batch.job.enabled=false
-task.scheduling.threadPoolSize=50
+#spring.batch.job.enabled=false
+#task.scheduling.threadPoolSize=50
 
 ### Mailing ####
 spring.mail.host=10.224.49.221
@@ -114,9 +83,8 @@ server.max-http-header-size=2097152
 spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2100MB
 spring.servlet.multipart.location=/pv-storage/
+## Invalid Extension
+file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
 ## Upload Path
 file.upload.rootPath=/pv-storage/
 file.upload.divk.domestic.parts.claim=/pv-storage/divk/domestic/parts/claim
-
-## Invalid Extension
-file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
