반품생성 개발

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -87,4 +87,5 @@ spring.servlet.multipart.location=/pv-storage/
 file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
 ## Upload Path
 file.upload.rootPath=/pv-storage/
-file.upload.divk.domestic.parts.claim=/pv-storage/divk/domestic/parts/claim
+#file.upload.divk.domestic.parts.claim=/pv-storage/divk/domestic/parts/claim
+file.upload.divk.domestic.parts.claim=/pv-storage/claim
