파일업로드 경로 정리

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -86,6 +86,6 @@ spring.servlet.multipart.location=/pv-storage/
 ## Invalid Extension
 file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
 ## Upload Path
-file.upload.rootPath=/pv-storage/
-#file.upload.divk.domestic.parts.claim=/pv-storage/divk/domestic/parts/claim
-file.upload.divk.domestic.parts.claim=/pv-storage/claim
+file.upload.rootPath=/pv-storage
+file.upload.order=/order
+file.upload.claim=/claim
