--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,6 +84,5 @@ spring.servlet.multipart.location=C:\\Downloads
 file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
 ## Upload Path
 file.upload.rootPath=C:\\Downloads
-#file.upload.divk.domestic.parts.claim=C:\\Downloads\\divk\\domestic\\parts\\claim
-file.upload.divk.domestic.parts.claim=C:\\Downloads\\claim
-
+file.upload.order=\\order
+file.upload.claim=\\claim
