메인/로그인 배경이미지 적용

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -84,7 +84,7 @@ spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2100MB
 spring.servlet.multipart.location=/pv-storage/
 ## Invalid Extension
-file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
+file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css^asp^aspx^jsp^php^inc^cgi^html^htm^js^jar^jhtml^php3^phtml 
 ## Upload Path
 file.upload.rootPath=/pv-storage
 file.upload.order=/order
