--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,7 +81,7 @@ spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2100MB
 spring.servlet.multipart.location=C:\\Downloads
 ## Invalid Extension
-file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css
+file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css^asp^aspx^jsp^php^inc^cgi^html^htm^js^jar^jhtml^php3^phtml
 ## Upload Path
 file.upload.rootPath=C:\\Downloads
 file.upload.order=\\order
