--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 ### Platform Attributes ###
-platform.service=DEV
+platform.service=PRD
 ##oracle, mariadb, mssql
 #platform.db=mariadb
 #platform.db=mssql
