--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -50,7 +50,7 @@ server.servlet.session.timeout=120m
 #Http Only : true로 설정하면 클라이언트 사이드의 자바스크립트는 해당 쿠키에 접근할 수 없다. 다시 말해 해당 쿠키를 생성하고 전송해 준 서버만 접근할 수 있다.
 #Secure Flag : true로 설정하면 보안이 확보된 채널(HTTPS)을 통해서만 쿠키를 전송한다. 중간에서 엿볼 수 없다
 server.session.cookie.http-only=true
-server.session.cookie.secure=true
+#server.session.cookie.secure=true
 
 ### Cache ###
 ## Redis Cache
