베타오픈 점검

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ if.logging.db=true
 
 ### SAP Landscape ###
 sap.jco.enable=true
+sap.jco.default_resource=DEFAULT
 
 ## Oracle
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
