--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,6 +15,7 @@ if.logging.db=true
 
 ### SAP Landscape ###
 sap.jco.enable=true
+sap.jco.default_resource=DEFAULT
 
 ## Oracle
 spring.datasource.driverClassName=oracle.jdbc.OracleDriver
