--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,6 +11,7 @@ spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
 if.logging.sap=true
+if.logging.sap.result=false
 if.logging.db=true
 
 ### SAP Landscape ###
