--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.thymeleaf.encoding=UTF-8
 
 ### Interface Logging ###
 if.logging.sap=true
+if.logging.sap.result=true
 if.logging.db=true
 
 ### SAP Landscape ###
