--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,8 @@ spring.redis.lettuce.shutdown-timeout=200ms
 spring.session.store-type=REDIS
 
 ## Session timeout. If a duration suffix is not specified, seconds are used.
-server.servlet.session.timeout=120m
+#7200sec = 120minutes 
+server.servlet.session.timeout=7200
 
 ## Spring Security
 #Http Only : true로 설정하면 클라이언트 사이드의 자바스크립트는 해당 쿠키에 접근할 수 없다. 다시 말해 해당 쿠키를 생성하고 전송해 준 서버만 접근할 수 있다.
