DIVK 요청사항 반영: 버튼 순서 변경, 상세보기 팝업으로 오픈되도록 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,12 +59,10 @@ sso.ad.domainToken=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJET09TQU4tU1NP
 sso.ad.domainSecret=72564eff-91c6-4b6b-b029-e9950e473b64
 sso.ad.platform-gateway-host=https://gateway-dev.d-platform.doosan.com
 
-## Master Password
-master.password=CKI2gZB1dOUL+9NDpk/C9w==
-
-### Batch ###
-#spring.batch.job.enabled=false
-#task.scheduling.threadPoolSize=50
+### Browser Cache Busting ###
+spring.resources.chain.enabled=true
+spring.resources.chain.strategy.content.enabled=true
+spring.resources.chain.strategy.content.paths=/**
 
 ### Mailing ####
 spring.mail.host=10.224.49.221
