--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,10 +73,15 @@ spring.mail.password=HiP9HSAJiyxbd8zk0xkXbw==
 server.max-http-header-size=2097152
 
 ### File Upload ###
+##Xfree
+xfree.file.path=C:\\Downloads\\xfree
+#xfree.file.webPath=/portal/editor/img/
+
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2100MB
 spring.servlet.multipart.location=C:\\Downloads
+
 ## Invalid Extension
 file.upload.invalidExtension=exe^com^bat^sh^html^js^class^css^asp^aspx^jsp^php^inc^cgi^html^htm^js^jar^jhtml^php3^phtml
 ## Upload Path
