--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -75,6 +75,9 @@ spring.mail.password=HiP9HSAJiyxbd8zk0xkXbw==
 server.max-http-header-size=2097152
 
 ### File Upload ###
+##Xfree
+xfree.file.path=/pv-storage/xfree
+
 ## Multipart
 spring.servlet.multipart.maxFileSize=2048MB
 spring.servlet.multipart.maxRequestSize=2100MB
